update.css
/* ... */
	ul#nice-menu-1 li ul li a, ul#main-menu  li ul li a { color: #404040 !important; padding: 5px 8px 5px 8px !important; margin: 0 !important; text-decoration: none !important; min-width: 140px; width: auto !important; }
	ul#nice-menu-1 li ul li a:hover, ul#main-menu  li ul li a:hover { background: #404040 !important; color: #fff !important; }
	
	/* Dritte Ebene */
	ul#nice-menu-1 li ul li ul, ul#main-menu  li ul li ul { position: absolute !important; width: auto !important; padding: 0 !important; margin: 5px 0 0 -30px !important; border: none !important; }
	ul#nice-menu-1 li ul li ul li, ul#main-menu  li ul li ul li { line-height: 18px; width: 280px !important; border: none; padding: 0 !important; margin: 0 !important; border: none !important; text-align: left; }
	ul#nice-menu-1 li ul li ul li a, ul#main-menu  li ul li ul li a  { display: block; padding: 5px 8px 5px 8px !important; margin: 0 !important; text-decoration: none !important; width: 100% !important; }
	ul#nice-menu-1 li ul li ul li a:hover, ul#main-menu  li ul li ul li a:hover { background: none !important; }
	ul#nice-menu-1 li ul li ul li:hover, ul#main-menu li ul li ul li:hover  { background: #404040 !important; }
	
	/* Erster Hauptmenuepunkt */
	#menu-home { margin-left: 0px !important; }
	

/* Fokusgruppen Navigation */

	#block-nice_menus-2 .nice-menu li ul { border-color: #404040; }
	#block-nice_menus-2 .nice-menu li ul li { padding: 0 !important; }
	#block-nice_menus-2 .nice-menu li ul li a { padding: 3px 1px !important; color: #404040; margin: 0 !important; height: auto !important;  }
	#block-nice_menus-2 .nice-menu li ul li a:hover { text-decoration: none; margin: 0 !important; color: #000; }

/* Paginierung */

	.item-list .pager { margin: 35px 0 0 0 !important; padding: 15px 0 !important; border-top: #404040 1px solid; text-align: left !important; }
	.item-list .pager li { display: inline-block !important; padding: 3px !important; margin: 0 !important; }
	.item-list .pager li a { color: #48A; padding: 2px 4px !important; display: inline-block; }
	.item-list .pager li a:hover { color: #EEE; }


/* Navigation im Rechten Block */
  .block .menu ul, .block .menu ul ul { border-color: #fff; margin-bottom: 0;}
  .block .menu a, .drilldown .menu a { margin-left: 0; padding-left: 25px; }
  .block .menu a:hover, .drilldown .menu a:hover { background: white url(/profiles/openatrium/themes/ginkgo/images/sprite_base.png) 0px -60px no-repeat}

/* Bloecke */
	
	.page-region .block { margin-bottom: 20px; color: #404040 !important; }
	.page-region .block h2, .page-region .block .block-title { /*font-size: 13px !important;*/ }
		
	.page-region .block h2, .block .view-header, .page-region .block .block-title, .exhibit-facet-header, .exhibit-flowingFacet-header { background: none !important; border: none !important;  border-bottom: 1px solid #ccc; }
	.page-region .block h2, .block .view-header, .page-region .block .block-title , .page-region .block h2 a, .block .view-header a, .page-region .block .block h2 a, .exhibit-facet-header-title, .exhibit-flowingFacet-header-title { color: #404040;  font-size: 14px; padding: 0 0 3px 0 !important; }
	.page-region .block-content h2, .block-content .view-header, .page-region .block-content .block-title { border-bottom: 0; }
	
	.page-region .block h3 { font-size: 13px; }
	
	.block-projecttabs, .block-focus_groups { background: none !important; border: none !important; }
	
	#block-projecttabs-2 li { width: 70px !important; overflow: hidden; height:115px; }
    
	.page-region .block .block-content { background: 0; border: 0; }
	.block, .item-list { border: 0; }
 

/* Nodes */

	.node { margin-bottom: 0px !important; /* 40px before*/ }
	.node .content { padding: 0 0 10px 0 !important; }
	.node-more-link { margin-bottom: 10px; }
	.addthis_button_div { margin: 0 !important; display: inline !important;}
	.node .links { margin: 0 0 10px 0; border: none !important; font-size: 10px; float: left; }
  .node.sticky .links { margin-bottom: 0; padding-bottom: 0; }
   ul.links.inline, ul.links.inline li, ul.links.inline li a { margin-left: 0 !important; padding-bottom: 0;}
   .item-list .node .field.terms { padding-bottom: 0 !important; }
   .pager ul.pager-list { margin-bottom: 0 !important; }
   div.pager { height: 28px;}
/* Kommentare */

	#comments { background: #f9f9f9; padding: 5px; margin: 0; }
	#comments .box { padding: 0; margin: 0; }
	#comments h2 { margin-top: 0; }	
	.preview { border-color: #404040; color: #404040; }

/* Feature Links */
	
	/* div */
	#page-tools .tabs { height: 31px; margin: 10px 0; top: auto;  padding: 0; }
	#page-tools .tabs .block, #page-tools .tabs .block-content { background: transparent; }
	#page-tools div.tabs { border-left: #bbb 1px solid !important; }
    #page-tools div.tabs.features-menu { margin-top: 0; border-bottom: #bbb 1px solid; }
	#page-tools .tabs #block-menu-features { border:0; }
	#page-tools .tabs #block-menu-features .block-title { display: none; }
	
	/* ul */	
	#page-tools ul.primary-tabs, #page-tools .tabs #block-menu-features ul, #page-tools .tabs .block #block-menu-features, #page-tools .tabs #block-menu-features.block .block-content { margin: 0; padding: 0; }
	 div#secondary-tabs { margin: 0; padding: 0;  border-bottom: 0}

	/* li */
	#page-tools ul.primary-tabs li, #page-tools .tabs #block-menu-features.block ul.menu li { 
		font-weight: bold !important; 
		float: left; 
		height: 30px; 
		line-height: 30px; 
		margin: 0 !important; 
		border: #bbb 1px solid !important; border-left: none !important; border-bottom: none !important;
		height: 30px !important; 
		background: url(img/bg/tabverlauf.jpg) repeat-x;
        width: auto;		
	}
	ul.tabs li:hover { background: #fff !important; }
/* ... */

